--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-
-aiofiles
-pyrogram
-requests
-dnspython
-# tgcrypto
+aiofiles==0.8.0
+pyrogram==2.0.0
+requests==2.28.1
+dnspython==2.2.1
+pymongo==4.3.3
+motor==3.0.0
+pillow==9.2.0
+numpy==1.23.4
 asyncio
-pymongo
-motor
-pillow
-numpy
-lxml[html_clean]
+lxml[html_clean
+zlib1g-dev
